Refactor achievements API: cleaner endpoints, add trip achievements query (#58)
* Initial plan

* Refactor achievements endpoints for clearer API structure

Co-authored-by: tomassirio <19593836+tomassirio@users.noreply.github.com>

* Add achievements API refactoring summary document

Co-authored-by: tomassirio <19593836+tomassirio@users.noreply.github.com>

* Link achievements API documentation from system overview

Co-authored-by: tomassirio <19593836+tomassirio@users.noreply.github.com>

* Remove deprecated achievement endpoints

Co-authored-by: tomassirio <19593836+tomassirio@users.noreply.github.com>

* Move current user achievements endpoint from /achievements/me/achievements to /users/me/achievements

Co-authored-by: tomassirio <19593836+tomassirio@users.noreply.github.com>

* feat: Add seeding for achievements data and refactor AchievementType to use Lombok

* feat: Add achievement endpoint constants for all, user-specific, and trip-specific achievements

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: tomassirio <19593836+tomassirio@users.noreply.github.com>
Co-authored-by: tomassirio <tomassirio@gmail.com>