@@ -1,6 +1,5 @@
 package com.tomassirio.wanderer.query.controller;
 
-import static com.tomassirio.wanderer.commons.utils.BaseTestEntityFactory.USER_ID;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
@@ -13,7 +12,6 @@ import com.tomassirio.wanderer.commons.exception.GlobalExceptionHandler;
 import com.tomassirio.wanderer.commons.utils.MockMvcTestUtils;
 import com.tomassirio.wanderer.query.service.AchievementQueryService;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import org.junit.jupiter.api.BeforeEach;
@@ -25,27 +23,30 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.test.web.servlet.MockMvc;
 
 @ExtendWith(MockitoExtension.class)
-class AchievementQueryControllerTest {
+class TripAchievementQueryControllerTest {
 
-    private static final String ACHIEVEMENTS_URL = "/api/1/achievements";
+    private static final String TRIPS_URL = "/api/1/trips";
 
     private MockMvc mockMvc;
 
     @Mock private AchievementQueryService achievementQueryService;
 
-    @InjectMocks private AchievementQueryController achievementQueryController;
+    @InjectMocks private TripAchievementQueryController tripAchievementQueryController;
 
     @BeforeEach
     void setUp() {
         mockMvc =
                 MockMvcTestUtils.buildMockMvcWithCurrentUserResolver(
-                        achievementQueryController, new GlobalExceptionHandler());
+                        tripAchievementQueryController, new GlobalExceptionHandler());
     }
 
     @Test
-    void getAvailableAchievements_shouldReturnAllAchievements() throws Exception {
+    void getTripAchievements_shouldReturnAllTripAchievements() throws Exception {
         // Given
-        AchievementDTO achievement1 =
+        UUID tripId = UUID.randomUUID();
+        UUID userId = UUID.randomUUID();
+
+        AchievementDTO achievementDTO =
                 new AchievementDTO(
                         UUID.randomUUID().toString(),
                         AchievementType.DISTANCE_100KM,
@@ -53,27 +54,26 @@ class AchievementQueryControllerTest {
                         "Walk 100km in a single trip",
                         100);
 
-        AchievementDTO achievement2 =
-                new AchievementDTO(
+        UserAchievementDTO userAchievement =
+                new UserAchievementDTO(
                         UUID.randomUUID().toString(),
-                        AchievementType.UPDATES_10,
-                        "Getting Started",
-                        "Post 10 updates on a single trip",
-                        10);
+                        userId.toString(),
+                        achievementDTO,
+                        tripId.toString(),
+                        Instant.now(),
+                        105.5);
 
-        List<AchievementDTO> achievements = Arrays.asList(achievement1, achievement2);
-
-        when(achievementQueryService.getAvailableAchievements()).thenReturn(achievements);
+        when(achievementQueryService.getTripAchievements(tripId))
+                .thenReturn(List.of(userAchievement));
 
         // When & Then
-        mockMvc.perform(get(ACHIEVEMENTS_URL))
+        mockMvc.perform(get(TRIPS_URL + "/" + tripId + "/achievements"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").isArray())
-                .andExpect(jsonPath("$.length()").value(2))
-                .andExpect(jsonPath("$[0].type").value("DISTANCE_100KM"))
-                .andExpect(jsonPath("$[0].name").value("First Century"))
-                .andExpect(jsonPath("$[0].thresholdValue").value(100))
-                .andExpect(jsonPath("$[1].type").value("UPDATES_10"))
-                .andExpect(jsonPath("$[1].name").value("Getting Started"));
+                .andExpect(jsonPath("$.length()").value(1))
+                .andExpect(jsonPath("$[0].userId").value(userId.toString()))
+                .andExpect(jsonPath("$[0].tripId").value(tripId.toString()))
+                .andExpect(jsonPath("$[0].achievement.type").value("DISTANCE_100KM"))
+                .andExpect(jsonPath("$[0].valueAchieved").value(105.5));
     }
 }
